<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingHorizontal="32dp"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_first_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold_italic"
                android:text="@string/furst_sub"
                android:textColor="#787878"
                android:textFontWeight="900"
                android:textSize="54sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="40dp">
                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_horizontal"
                    />
            </FrameLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal">

                <TextView
                    android:id="@+id/tv_last_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold_italic"
                    android:text="@string/last_sub"
                    android:textAlignment="textEnd"
                    android:textColor="#787878"
                    android:textFontWeight="900"
                    android:textSize="54sp" />
            </RelativeLayout>
        </FrameLayout>
        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_name"
            android:textSize="24sp"
            android:layout_marginBottom="12dp"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_explore"
                android:text="@string/explore_text"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/button_share"
                android:text="@string/share_text"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_detail"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_text" />
        <TextView
            android:textColor="#CDCDCD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:layout_marginBottom="16dp"
            android:text="@string/overlap_warning_text" />

    </LinearLayout>
</ScrollView>